--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^7.28.3",
     "@vis.gl/react-google-maps": "^1.5.2",
     "axios": "^1.9.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
     "react": "^19.0.0",
     "react-date-picker": "^11.0.0",
